--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
-Package: CountryRodes
+Package: cloudCountryRodes
 Title: Translation of Country Names and Country Codes
-Version: 1.2-2
+Version: 1.3.0
 Authors@R: 
-    c( person(given = "Geraline",
+    c( person(given = "Geraldine",
               family = "Henningsen",
               role = c("aut", "cre"),
               email = "hennings@unhcr.org",
@@ -10,7 +10,11 @@ Authors@R:
        person(given = "Giulia",
               family = "Del Panta",
               role = c("ctb"),
-              email = "delpanta@unhcr.org"))
+              email = "delpanta@unhcr.org"),
+       person(given = "Margherita",
+              family = "Leonelli",
+              role = c("ctb"),
+              email = "leonellm@unhcr.org"))
 Description: This package allows the user to translate a vector of country codes 
    or names to either the ISO-alpha3 format, to UNHCR's proGres-alpha3 format, or to other name formats. 
 DEPENDENCIES: R (>= 3.5.0)
